--- a/practiceforinterview/package.json
+++ b/practiceforinterview/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
+    "react-wavify": "^1.8.2",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
@@ -20,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server":"json-server --watch db.json --port 8080"
+    "server": "json-server --watch db.json --port 8080"
   },
   "eslintConfig": {
     "extends": [
